--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Product+Sans:wght@300;400;500;700&display=swap");
+
 html,
 body {
   padding: 0;
@@ -13,6 +15,7 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: "Product Sans";
 }
 
 @media (prefers-color-scheme: dark) {
