--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Product+Sans:wght@300;400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Product+Sans:wght@300;400;500;700&display=swap');
 
 html,
 body {
@@ -25,7 +25,7 @@ a {
 
 * {
   box-sizing: border-box;
-  font-family: "Product Sans";
+  font-family: 'Product Sans';
 }
 
 @media (prefers-color-scheme: dark) {
